--- a/src/main/movies/MovieListItem.css
+++ b/src/main/movies/MovieListItem.css
@@ -59,3 +59,16 @@ ul {
 .movie-rating {
 	align-items: flex-end;
 }
+
+.thumbnail {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	cursor: pointer;
+	text-decoration: none;
+  }
+.thumbnail:hover {
+	box-shadow: 0 10px 15px rgba(0,0,0,0.3);
+  /* opacity: 0; */
+  transition: box-shadow 0.2s ease-in-out;
+}
