--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -1,14 +1,17 @@
 /* Header.js */
 
 .header {
-    height: 50px;
+    height: 100px;
     margin-top: 20px;
     box-shadow: 0px 15px 10px -15px #111;
 }
 .header a {
-    text-decoration: none;
     font-family: "europa", "Avenir", Helvetica, Arial, sans-serif;
     color: #e27a3f;
     text-align: center;
     line-height: 1.2rem;
+}
+
+.header .home {
+    color: #555;
 }
