--- a/src/movie/Movie.css
+++ b/src/movie/Movie.css
@@ -41,7 +41,7 @@
     display: flex;
     flex-direction: column;
     max-width: 800px;
-    margin: 20px auto 60px auto;
+    margin-left: 20px;
   }
   
   .movie-page .movie-details h1 {
@@ -70,4 +70,8 @@
     padding: 0 10px;
   }
   
-  
+  .content {
+    margin: 20px auto 60px;    
+    display:flex;
+    justify-content: space-between;
+  }
